force-app/main/default/objects/Out_of_Office__c/Out_of_Office__c.object-meta.xml
<CustomObject>
    <label>Out of Office</label>
    <nameField>
        <label>Out of Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out of Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>