force-app/main/default/objects/Out_of_Office__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Last day user will out of office</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>