force-app/main/default/objects/Out_of_Office__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>First day user will out of office</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>