force-app/main/default/objects/Out_of_Office__c/validationRules/Start_Date_After_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_After_End_Date</fullName>
    <active>true</active>
    <description>Prevents user from entering a start date after end date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>The Start Date cannot be after the End Date</errorMessage>
</ValidationRule>