force-app/main/default/objects/Out_of_Office__c/listViews/Future_Out_of_Offices.listView-meta.xml
<ListView>
    <fullName>Future_Out_of_Offices</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Future Out of Offices</label>
</ListView>